add button oll step

--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="robots" content="index,follow" />
 	<title>BeKey</title>
-	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link media="all" rel="stylesheet" href="css/main.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" defer></script>
 	<script>window.jQuery || document.write('<script src="js/jquery-1.12.4.min.js" defer><\/script>')</script>
 	<script src="js/jquery.fullpage.js" defer></script>
 	<script src="js/main.js" defer></script>
+	<script id="bx24_form_button" data-skip-moving="true" defer>
+        (function(w,d,u,b){w['Bitrix24FormObject']=b;w[b] = w[b] || function(){arguments[0].ref=u;
+                (w[b].forms=w[b].forms||[]).push(arguments[0])};
+                if(w[b]['forms']) return;
+                s=d.createElement('script');r=1*new Date();s.async=1;s.src=u+'?'+r;
+                h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
+        })(window,document,'https://bekey.bitrix24.com/bitrix/js/crm/form_loader.js','b24form');
+
+        b24form({"id":"8","lang":"en","sec":"romt97","type":"button","click":""});
+	</script>
 </head>
 <body>
 	<div id="fullpage" class="wrapper">
@@ -54,7 +65,8 @@
 				</div>
 				<div class="s1b-sect">
 					<p>But what do I do next?</p>
-					<a href="#" class="btn-orange">Discuss my project</a>
+					<button class="b24-web-form-popup-btn-8 btn-orange">Discuss my project</button>
+					<!--<a href="#" class="btn-orange">Discuss my project</a>-->
 					<div class="arrow-down">
 						<span></span>
 					</div>
@@ -83,7 +95,7 @@
 							<div class="s2texth text-center">
 								<p class="font-osvald">BeKey is the right place to contact.</p>
 								<p class="font-ff fontss"></p>
-								<p  class="font-osvald fonts">We are one stop market for development and experts hub.</p>
+								<p  class="font-osvald fonts">We are a one stop market for development and experts hub.</p>
 								<p class="font-osvald">Before you start looking for investments you need to have your detailed business plan prepared, which should include  <span>marketing research, cost, timeline.</span></p>
 								<p class="font-osvald">Also it is good to have specification and workplans.</p>
 							</div>
@@ -130,7 +142,7 @@
 						<div class="s2text-head">
 							<div class="s2texth">
 								<h2>Step 1</h2>
-								<p class="font-osvald"><strong>BeKey can help with the following: </strong> <strong class="font-chunc mt-3">(Free of charge)</strong></p>
+								<p class="font-osvald"><strong>BeKey CAN HELP YOU WITH THE FOLLOWING: </strong> <strong class="font-chunc mt-3"> (FREE OF CHARGE)</strong></p>
 								<ul class="font-osvald">
 									<li>- advise on technology stack</li>
 									<li>- estimate the costs for the prototype, MVP and production version.</li>
@@ -138,6 +150,7 @@
 									<li>- create the work plans</li>
 									<li>- set milestones and timelines</li>
 								</ul>
+								<button class="b24-web-form-popup-btn-8 btn-orange">GET ESTIMATES</button>
 							</div>
 						</div>
 					</div>
@@ -180,6 +193,7 @@
 									<li>- Front End of the website/mobile app</li>
 									<li>- Finalize prototype for demos to potential investors <strong class="ltext">(no backend at this point)</strong></li>
 								</ul>
+								<button class="b24-web-form-popup-btn-8 btn-orange">BUILD PROTOTYPE</button>
 							</div>
 						</div>
 					</div>
@@ -187,7 +201,7 @@
 					<div class="s2-headsection s3-headsection">
 						<div class="s2text-head">
 							<div class="s2texth">
-								<p class="font-osvald">If you need technical expertise on a meeting with investors, we’ll be happy to take part in it, free of charge.</p>
+								<p class="font-osvald">If you need technical expertise for a meeting with investors, we will be happy to take part in it, free of charge.</p>
 							</div>
 						</div>
 					</div>
@@ -213,13 +227,14 @@
 						<div class="s2text-head">
 							<div class="s2texth">
 								<h2>Step 3</h2>
-								<p class="font-osvald">You received first round of investments and you are ready to build the MVP:</p>
+								<p class="font-osvald ttu">You received first round of investments and you are ready to build the MVP:</p>
 								<ul class="font-osvald">
 									<li>- establish the team core</li>
 									<li>- set development/testing/release methodology</li>
 									<li>- plan the builds and releases</li>
 									<li>- set environments</li>
 								</ul>
+								<button class="b24-web-form-popup-btn-8 btn-orange">LAUNCH DEVELOPMENT</button>
 							</div>
 						</div>
 					</div>
@@ -254,6 +269,7 @@
 									<li>- automate testing</li>
 									<li>- release MVP</li>
 								</ul>
+								<button class="b24-web-form-popup-btn-8 btn-orange">DEVELOP MVP</button>
 							</div>
 						</div>
 					</div>
@@ -288,8 +304,8 @@
 						<div class="s2text-head">
 							<div class="s2texth">
 								<h2>Step 5</h2>
-								<p class="font-chunc">MVP turned out to be a blast!!! </p>
-								<p class="font-osvald">You received second and third round of investments!</p>
+								<p class="font-chunc ttu">MVP turned out to be a blast!!! </p>
+								<p class="font-osvald ttu">You received second and third round of investments!</p>
 								<ul class="font-osvald">
 									<li>- extend your team</li>
 									<li>- consult and coach your team</li>
@@ -297,6 +313,7 @@
 									<li>- get customers onboard</li>
 									<li>- create support team</li>
 								</ul>
+								<button class="b24-web-form-popup-btn-8 btn-orange">EXTEND YOUR TEAM</button>
 							</div>
 						</div>
 					</div>
@@ -304,7 +321,7 @@
 						<img src="images/plane7.png" alt="plane">	
 					</div>
 					<div class="text-bot">
-						<p>Your company got into the top five startups of the year!</p>
+						<p>Your company got into the top 5 startups of the year!</p>
 					</div>
 				</div>
 				<div class="planet">
