--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<div class="s2texth text-center">
 								<p class="font-osvald">BeKey is the right place to contact.</p>
 								<p class="font-ff fontss"></p>
-								<p  class="font-osvald fonts">We are a one stop market for development and experts hub.</p>
+								<p  class="font-osvald fonts">We are a one stop market for development and a hub for experts.</p>
 								<p class="font-osvald">Before you start looking for investments you need to have your detailed business plan prepared, which should include  <span>marketing research, cost, timeline.</span></p>
 								<p class="font-osvald">Also it is good to have specification and workplans.</p>
 							</div>
@@ -305,7 +305,7 @@
 							<div class="s2texth">
 								<h2>Step 5</h2>
 								<p class="font-chunc ttu">MVP turned out to be a blast!!! </p>
-								<p class="font-osvald ttu">You received second and third round of investments!</p>
+								<p class="font-osvald ttu">You received second and third rounds of investments!</p>
 								<ul class="font-osvald">
 									<li>- extend your team</li>
 									<li>- consult and coach your team</li>
