--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="s1texth">
 							<p class="font-ff fontf">for my startup!</p>
 							<p class="font-osvald fonts">I have done some market research</p>
-							<p class="font-osvald fontth">and I’m sure this idea has a great chances</p>
+							<p class="font-osvald fontth">and I’m sure this idea has a great chance</p>
 							<p class="font-chunc fontfo">for success!</p>
 						</div>
 					</div>
